# ClimaVisionArtificial

./: CMakeLists.txt  README.md  addPhoto.cxx  sun.cxx  testImage.cxx
