cmake_minimum_required(VERSION 2.8)
project( Pronostico )
find_package( OpenCV REQUIRED )
add_executable( sun sun.cxx )
target_link_libraries( sun ${OpenCV_LIBS} )
add_executable( test testImage.cxx )
target_link_libraries( test ${OpenCV_LIBS} )
add_executable( addPhoto addPhoto.cxx )
target_link_libraries( addPhoto ${OpenCV_LIBS} )
